# vjepa2-mlx

./: .gitignore  README.md  pyproject.toml
docs/: LESSONS.md  PREFLIGHT.md  REPORT.md
scripts/: ac_parity.py  benchmark.py  convert_to_mlx.py  gen_goldens.py  publish_hf.py
tests/parity/: test_ac_predictor_parity.py  test_artifact.py  test_classifier_parity.py  test_encoder_parity.py  test_ops_parity.py  test_predictor_parity.py
tests/smoke/: test_config.py
vjepa2_mlx/: __init__.py  config.py  pipeline_mlx.py
vjepa2_mlx/models/: __init__.py  ac_predictor.py  modeling_vjepa2.py
vjepa2_mlx/ops/: __init__.py  patch_embed_3d.py  rope_3d.py
vjepa2_mlx/utils/: convert.py  weights.py
